syntax = "proto3";
package prismatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/prism-finance/prismatics/types";

message Asset {
  string id = 1;
  string token_denom = 2;
  int64 total_refracted_c_asset = 3;
  int64 total_p_asset = 4;
  string accrued_yield_per_y_asset = 5 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  int64 pool_id = 6;
  string exchange_rate = 7 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  google.protobuf.Timestamp first_exchange_rate_time = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp last_exchange_rate_time = 9 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string p_c_asset_exchange_rate = 10 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message QueryAssetRequest {
  string asset_id = 1;
}

message QueryAssetResponse {
  Asset asset = 1 [(gogoproto.nullable) = false];
}